[ALPS07857445] arm64: dts: mt6765: 6370 interrupt pin
6370 interrupt pin update and use common dtsi file

MTK-Commit-Id: 8e398ad851a5b4adaea858cdf85bf0f27352f357

Change-Id: Icbd44a8839fc93291c8cdc27657b51132d9b7252
CR-Id: ALPS07857445
Feature: Charger
Signed-off-by: ot_sumitra.dwivedi <ot_sumitra.dwivedi@mediatek.com>

--- a/arch/arm/boot/dts/mt6765.dts
+++ b/arch/arm/boot/dts/mt6765.dts
@@ -5080,7 +5080,7 @@ initcall_debug=1 pelt=8 clk_ignore_unused=1";
 #include "cust_mt6765_msdc.dtsi"
 #include "mt6357.dtsi"
 #include "bat_setting/mt6765_battery_prop.dtsi"
-#include "mt6370_65.dtsi"
+#include "mt6370.dtsi"
 #include "rt9471.dtsi"
 #include "trusty.dtsi"
 
@@ -5095,3 +5095,6 @@ initcall_debug=1 pelt=8 clk_ignore_unused=1";
 	md_vmodem = <800000 800000>;
 };
 
+&mt6370 {
+	interrupts = <11 IRQ_TYPE_LEVEL_LOW 11 0>;
+};
