--- a/arch/arm64/boot/dts/mediatek/mt6765.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6765.dts
@@ -4575,7 +4575,7 @@ initcall_debug=1 pelt=8";
 #include "mediatek/cust_mt6765_msdc.dtsi"
 #include "mediatek/mt6357.dtsi"
 #include "mediatek/bat_setting/mt6765_battery_prop.dtsi"
-#include "mediatek/mt6370_65.dtsi"
+#include "mediatek/mt6370.dtsi"
 #include "mediatek/rt9471.dtsi"
 #include "mediatek/trusty.dtsi"
 
@@ -4603,3 +4603,6 @@ initcall_debug=1 pelt=8";
 	charger = <&mt6370_chg>; /*mt6357 get charger status*/
 };
 
+&mt6370 {
+	interrupts = <11 IRQ_TYPE_LEVEL_LOW 11 0>;
+};
