[ALPS07849680] arm64: dts: mt6765: update config for sec-rng
Update  sec-rng nodes

MTK-Commit-Id: 00bc8c39420174197fcaa83f34f9f6ee5222f429

Change-Id: Id56b1439b7fd0d1ecbaef609484d0a26e9fefead
CR-Id: ALPS07849680
Feature: trng
Signed-off-by: mufaddal.ali <mufaddal.ali@mediatek.com>

--- a/arch/arm64/boot/dts/mediatek/mt6765.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6765.dts
@@ -1318,6 +1318,9 @@ initcall_debug=1 pelt=8";
 
 	hwrng: hwrng {
 		compatible = "arm,sec-rng";
+		methods = "smc";
+		method-fid = /bits/ 16 <0x26a>;
+		quality = /bits/ 16 <900>;
 	};
 
 	mobicore: mobicore {
