[ALPS07816479]  arm64: dts: mt6765: UART
Disable UART kernel logs in User mode

MTK-Commit-Id: ac56816311017eecb725b3fdd0880419b536532d

Change-Id: I1683a3b88c11f71d63f4292c75567556b7c7b42a
Signed-off-by: ot_shiv.prakash <ot_shiv.prakash@mediatek.com>
CR-Id: ALPS07816479
Feature: uart_driver

--- a/arch/arm64/boot/dts/mediatek/mt6765.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6765.dts
@@ -462,8 +462,7 @@ aliases {
 
 	/* chosen */
 	chosen: chosen {
-		bootargs = "console=tty0 console=ttyS0,921600n1 vmalloc=400M \
-earlycon=uart8250,mmio32,0x11002000 \
+		bootargs = "console=tty0 vmalloc=400M \
 8250.nr_uarts=4 \
 page_owner=on \
 swiotlb=noforce androidboot.hardware=mt6765 \
