[ALPS07771399] thermal: fix thermal throttle issue
fix thermal throttle issue

MTK-Commit-Id: 490529af6b1d128362cd9ce6ba663612f62943ad

Signed-off-by: yugang.wang <yugang.wang@mediatek.com>
CR-Id: ALPS07771399
Feature: Thermal Management
Change-Id: I0b2d497bd4efc6b64c8d44e4bb44abc8f8c7fa3d

--- a/drivers/misc/mediatek/thermal/Makefile
+++ b/drivers/misc/mediatek/thermal/Makefile
@@ -11,6 +11,7 @@
 # GNU General Public License for more details.
 #
 
+ccflags-y  += -I$(srctree)/drivers/thermal/
 ccflags-y  += -I$(srctree)/drivers/misc/mediatek/include/
 ccflags-y  += -I$(srctree)/drivers/misc/mediatek/include/ppm_v3/
 ccflags-y  += -I$(srctree)/drivers/misc/mediatek/include/mt-plat/
