--- a/drivers/misc/mediatek/spm/common_v0/Makefile
+++ b/drivers/misc/mediatek/spm/common_v0/Makefile
@@ -1,20 +1,10 @@
 # Include mtk_idle_internal.h for MTK_IDLE_OPT_XXX
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/spm/common/
-# Include mt-plat/upmu_common.h
-# Include mt-plat/mtk_ccci_common.h
-ccflags-y += -I$(srctree)/drivers/misc/mediatek/include/
 # Include cpuidle_v3 headers mtk_cpuidle.h for atf/dormant driver
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/include/cpuidle/
-# Include dram header "mtk_dramc.h"
-ccflags-y += -I$(srctree)/drivers/misc/mediatek/dramc/$(MTK_PLATFORM)/
-# Include sspm header "sspm_ipi.h"
-ccflags-y += -I$(srctree)/drivers/misc/mediatek/sspm/
-ccflags-y += -I$(srctree)/drivers/misc/mediatek/sspm/$(MTK_PLATFORM)/
 # Include mtk idle headers and cpuidle driver header for external modules
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/include/
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/include/spm/
-# Include mtk_eem.h
-ccflags-y += -I$(srctree)/drivers/misc/mediatek/base/power/eem_v2/$(MTK_PLATFORM)/inc/
 # Include mmdvfs_mgr.h
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/smi/
 # Include uart header "mtk_uart_api.h"
@@ -23,32 +13,36 @@ ccflags-y += -I$(srctree)/drivers/misc/mediatek/uart/include/
 ifneq ($(filter y m,$(CONFIG_MICROTRUST_TEE_SUPPORT)),)
 include $(srctree)/drivers/tee/teei/Makefile.include
 endif
-ifeq ($(CONFIG_MTK_DRAMC), y)
-# Include dramc header "mtk_dramc.h"
-ccflags-y += -I$(srctree)/drivers/misc/mediatek/dramc/$(MTK_PLATFORM)/
+# Include thermal header "mtk_thermal.h"
+ifneq ($(CONFIG_MTK_LEGACY_THERMAL),)
+ccflags-y += -I$(srctree)/drivers/gpu/mediatek/gpufreq/
+ccflags-y += -I$(srctree)/drivers/misc/mediatek/thermal/v2/inc/mach/
 endif
 # Include sspm header "sspm_ipi.h"
-ifeq ($(CONFIG_MTK_TINYSYS_SSPM_V0), y)
+ifneq ($(CONFIG_MTK_TINYSYS_SSPM_V0),)
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/sspm/v0/
 endif
-ccflags-y += -I$(srctree)/include/linux/soc
-# Include mcdi header mtk_mcdi_api.h
+# Include mcdi header "mtk_mcdi_api.h"
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/mcdi/include/
+# Include cpufreq header "mtk_cpufreq_api.h"
+ifneq ($(CONFIG_MEDIATEK_CPU_DVFS),)
+ccflags-y += -I$(srctree)/drivers/misc/mediatek/cpufreq_v2/inc/
+endif
 
 obj-$(CONFIG_MTK_SPM_V0) += MTK_INTERNAL_SPM.o
 MTK_INTERNAL_SPM-y += mtk_spm.o
 MTK_INTERNAL_SPM-y += mtk_spm_twam.o
 MTK_INTERNAL_SPM-y += mtk_spm_irq.o
-#ifeq ($(CONFIG_MTK_DRAMC), y)
+ifneq ($(CONFIG_MTK_DRAMC),)
 MTK_INTERNAL_SPM-y += mtk_spm_dram.o
-#endif
+endif
 MTK_INTERNAL_SPM-y += mtk_spm_internal.o
 MTK_INTERNAL_SPM-y += mtk_spm_suspend.o
 MTK_INTERNAL_SPM-y += mtk_spm_suspend_process.o
-#ifeq ($(CONFIG_MTK_TINYSYS_SSPM_V0), y)
+ifneq ($(CONFIG_MTK_TINYSYS_SSPM_V0),)
 MTK_INTERNAL_SPM-y += mtk_sspm.o
 MTK_INTERNAL_SPM-y += mtk_spm_power.o
-#endif
+endif
 MTK_INTERNAL_SPM-y += mtk_spm_fs.o
 MTK_INTERNAL_SPM-y += mtk_spm_utils.o
 MTK_INTERNAL_SPM-y += mtk_idle_cond_check.o
