[ALPS07861782] arm64: dts: mt6765: support share sram
[Detail]
To support RDMA0 share MDP WROT0 sram feature.
Add MTK_DRM_OPT_SHARE_SRAM for feature control.

MTK-Commit-Id: 33701028b33a4a2df2eaad8a34df73ce0450d7e0

Change-Id: I67673e612f913a12624f85fad194fc95ffd790a6
Signed-off-by: ot_lalit.wadhwa <ot_lalit.wadhwa@mediatek.com>
CR-Id: ALPS07861782
Feature: display_mobile

--- a/arch/arm64/boot/dts/mediatek/mt6765.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6765.dts
@@ -209,7 +209,8 @@ aliases {
 				"MTK_DRM_OPT_MML_PRIMARY",
 				"MTK_DRM_OPT_DUAL_TE",
 				"MTK_DRM_OPT_VIRTUAL_DISP",
-				"MTK_DRM_OPT_RES_SWITCH";
+				"MTK_DRM_OPT_RES_SWITCH",
+				"MTK_DRM_OPT_SHARE_SRAM";
 
 			helper-value = <0>, /*MTK_DRM_OPT_STAGE*/
 				<1>, /*MTK_DRM_OPT_USE_CMDQ*/
@@ -259,7 +260,8 @@ aliases {
 				<0>, /*MTK_DRM_OPT_MML_PRIMARY*/
 				<0>, /*MTK_DRM_OPT_DUAL_TE*/
 				<0>, /*MTK_DRM_OPT_VIRTUAL_DISP*/
-				<0>; /*MTK_DRM_OPT_RES_SWITCH*/
+				<0>, /*MTK_DRM_OPT_RES_SWITCH*/
+				<1>; /*MTK_DRM_OPT_SHARE_SRAM*/
 		};
 		disp_mtee_sec: disp_mtee_sec {
 			compatible = "mediatek,disp_mtee";
