--- a/arch/arm/boot/dts/mt6765.dts
+++ b/arch/arm/boot/dts/mt6765.dts
@@ -454,7 +454,7 @@ aliases {
 	chosen: chosen {
 		bootargs = "console=tty0 console=ttyS0,921600n1 vmalloc=400M \
 earlycon=uart8250,mmio32,0x11002000 \
-slub_debug=OFZPU page_owner=on \
+page_owner=on \
 swiotlb=noforce androidboot.hardware=mt6765 \
 maxcpus=8 loop.max_part=7 \
 firmware_class.path=/vendor/firmware \
