[ALPS07869617] arm: dts: mt6768: CM_MGR & FPSGO
Need Change the interconnect type into different one

MTK-Commit-Id: c7ce37a0c1693b0f99fee209352f38b2e88e49fa

Signed-off-by: Qinghua Liu <qinghua.liu@mediatek.com>
CR-Id: ALPS07869617
Feature: VCORE DVFS
Change-Id: I225f413f4ebc61f2478de094052e20cae6de0d78

--- a/arch/arm/boot/dts/mt6768.dts
+++ b/arch/arm/boot/dts/mt6768.dts
@@ -72,7 +72,7 @@ aliases {
 			compatible = "mediatek,mt6768-cm_mgr";
 			reg = <0 0x0c530000 0 0x9000>;
 			reg-names = "cm_mgr_base";
-			interconnects = <&dvfsrc MT6873_MASTER_MCUSYS &dvfsrc MT6873_SLAVE_DDR_EMI>;
+			interconnects = <&dvfsrc MT6873_MASTER_MCU_0 &dvfsrc MT6873_SLAVE_DDR_EMI>;
 			interconnect-names = "cm-perf-bw";
 			required-opps = <&dvfsrc_freq_opp0>,
 					<&dvfsrc_freq_opp1>,
@@ -97,7 +97,7 @@ aliases {
 
 		fpsgo: fpsgo {
 			compatible = "mediatek,fpsgo";
-			interconnects = <&dvfsrc MT6873_MASTER_MCUSYS &dvfsrc MT6873_SLAVE_DDR_EMI>;
+			interconnects = <&dvfsrc MT6873_MASTER_MCU_1 &dvfsrc MT6873_SLAVE_DDR_EMI>;
 			interconnect-names = "fpsgo-perf-bw";
 			required-opps = <&dvfsrc_freq_opp0>;
 
