--- a/arch/arm64/boot/dts/mediatek/mt6768.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6768.dts
@@ -3338,7 +3338,7 @@ cma=64M transparent_hugepage=never";
 
 	usb_boost: usb_boost_manager {
 		compatible = "mediatek,usb_boost", "mediatek,mt6768-usb_boost";
-		interconnects = <&dvfsrc MT6873_MASTER_DBGIF &dvfsrc MT6873_SLAVE_DDR_EMI>;
+		interconnects = <&dvfsrc MT6873_MASTER_USB &dvfsrc MT6873_SLAVE_DDR_EMI>;
 		interconnect-names = "icc-bw";
 		required-opps = <&dvfsrc_freq_opp0>;
 		usb-audio;
