--- a/arch/arm64/boot/dts/mediatek/mt6895.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6895.dts
@@ -9630,7 +9630,7 @@
 
 		usb_boost: usb_boost_manager {
 			compatible = "mediatek,usb_boost", "mediatek,mt6895-usb_boost";
-			interconnects = <&dvfsrc MT6873_MASTER_DBGIF &dvfsrc MT6873_SLAVE_DDR_EMI>;
+			interconnects = <&dvfsrc MT6873_MASTER_USB &dvfsrc MT6873_SLAVE_DDR_EMI>;
 			interconnect-names = "icc-bw";
 			required-opps = <&dvfsrc_freq_opp0>;
 			usb-audio;
