[ALPS07868109] arm: dts: mt6768: Change the name of interconnect
Change MT6873_MASTER_MCUSYS to MT6873_MASTER_MM_DISP

MTK-Commit-Id: 48ee582f65b14df683587c9b3033bf122290ecf4

Signed-off-by: mtk23899 <xiuhai.deng@mediatek.com>
CR-Id: ALPS07868109
Feature: display_mobile
Change-Id: I2a73c70c7c81ea8b6887949493849264d8a13707

--- a/arch/arm/boot/dts/mt6768.dts
+++ b/arch/arm/boot/dts/mt6768.dts
@@ -135,7 +135,8 @@ aliases {
 			power-domains = <&scpsys MT6768_POWER_DOMAIN_DISP>;
 			operating-points-v2 = <&opp_table_mm>;
 			dvfsrc-vcore-supply = <&dvfsrc_vcore>;
-			interconnects = <&dvfsrc MT6873_MASTER_MCUSYS &dvfsrc MT6873_SLAVE_DDR_EMI>;
+			interconnects = <&dvfsrc MT6873_MASTER_MM_DISP &dvfsrc
+					MT6873_SLAVE_DDR_EMI>;
 				interconnect-names = "disp-perf-bw";
 				required-opps = <&dvfsrc_freq_opp0>,
 					<&dvfsrc_freq_opp1>,
