--- a/arch/arm64/boot/dts/mediatek/mt6765.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6765.dts
@@ -3018,7 +3018,7 @@ initcall_debug=1 pelt=8";
 			/*WDT_EINT */
 			   <GIC_SPI 269 IRQ_TYPE_LEVEL_HIGH 0>,
 			/*conn2ap_sw_irq*/
-			   <GIC_SPI 270 IRQ_TYPE_EDGE_RISING>;
+			   <GIC_SPI 270 IRQ_TYPE_EDGE_RISING 0>;
 		power-domains = <&scpsys MT6765_POWER_DOMAIN_CONN>;
 		pmic = <&main_pmic>;
 		memory-region = <&consys_mem>;
