[ALPS07868604] arm64: dts: mt6765: add remote wakeup node
add remote wakeup node ensure remote-wakeup function work fine

MTK-Commit-Id: 6176de4ba22e235e011a0fc3eeaea4e568e2d17d

Change-Id: I4a54f235b3a8124d99f30b2dbb8231c782aa3fcd
Signed-off-by: gaurav.khurana <gaurav.khurana@mediatek.com>
CR-Id: ALPS07868604
Feature: usb_musb

--- a/arch/arm64/boot/dts/mediatek/mt6765.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6765.dts
@@ -3127,6 +3127,8 @@ initcall_debug=1 pelt=8";
 		usb-role-switch;
 		usb_phy_offset = <0x800>;
 		cdp-block;
+		wakeup-source;
+		infracg = <&infracfg_ao>;
 		port {
 			musb_drd_switch: endpoint@0 {
 				remote-endpoint = <&usb_role>;
