[ALPS07874342] arm64: dts: mt6768: disable page_owner
disable page_owner and cma options in dts

MTK-Commit-Id: 6bf00258d30405937769ecab4628b36600b46267

Signed-off-by: Huangmin Ling <ot_huangmin.ling@mediatek.com>
CR-Id: ALPS07874342
Feature: Kernel Memory Management
Change-Id: Ia591776351944af748fc8a604d950da087682702

--- a/arch/arm64/boot/dts/mediatek/mt6768.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6768.dts
@@ -504,9 +504,9 @@ vmalloc=400M swiotlb=noforce \
 8250.nr_uarts=4 \
 cgroup.memory=nosocket,nokmem \
 firmware_class.path=/vendor/firmware \
-page_owner=on loop.max_part=7 \
+loop.max_part=7 \
 initcall_debug=1 pelt=8 \
-cma=64M transparent_hugepage=never";
+transparent_hugepage=never";
 		kaslr-seed = <0 0>;
 	};
 
