[ALPS07838514] arm64: dts: mt6985: add tzmp sync event in cmdq-test
Add tzmp sync event in cmdq-test.

MTK-Commit-Id: f55313457d35b62cb5ab5dafbb93fa493c8f1878

Change-Id: I7792859cb4d87a94230c490863a8cbde657ed4e3
Signed-off-by: zhiyin.luo <zhiyin.luo@mediatek.com>
CR-Id: ALPS07838514
Feature: cmdq_gce

--- a/arch/arm64/boot/dts/mediatek/mt6985.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6985.dts
@@ -9340,6 +9340,7 @@
 			 <&gce_m_sec 9 0 CMDQ_THR_PRIO_1>;
 		token-user0 = /bits/ 16 <CMDQ_SYNC_TOKEN_USER_0>;
 		token-gpr-set4 = /bits/ 16 <CMDQ_SYNC_TOKEN_GPR_SET_4>;
+		token-tzmp-aie-wait = /bits/ 16 <CMDQ_SYNC_TOKEN_TZMP_AIE_WAIT>;
 	};
 
 	mminfra-imax {
