[ALPS07862661] arm64: dts: mt6985: change mkp policy
Disable selinux_state policy.

MTK-Commit-Id: 520f44ececa2e3652551d2c36d82e3371bcf686a

Signed-off-by: Kuan-Ying Lee <Kuan-Ying.Lee@mediatek.com>
CR-Id: ALPS07862661
Feature: mkp
Change-Id: I365924212fcb00c93f41cbeb0e646089b80d0cc9

--- a/arch/arm64/boot/dts/mediatek/mt6985.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6985.dts
@@ -168,6 +168,7 @@
 
 	/* chosen */
 	chosen: chosen {
+		mkp,policy=<0x0001fffb>;
 		bootargs = "console=tty0 root=/dev/ram \
 			rcupdate.rcu_expedited=1 \
 			swiotlb=noforce disable_dma32=on \
