[ALPS07863761] arm64: dts: mt6985: add backlight dual node
add backlight dual device node

MTK-Commit-Id: 55b656b62788c48ea5c37498b74793a5c9673a27

Signed-off-by: fengping.yu <fengping.yu@mediatek.com>
CR-Id: ALPS07863761
Feature: led_driver
Change-Id: Ib19e2ca47154cacc6d5a7da1b81fa0913f383bbd

--- a/arch/arm64/boot/dts/mediatek/mt6985.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6985.dts
@@ -3660,6 +3660,15 @@
 			};
 		};
 
+		mtk_leds1: mtk_leds1 {
+			backlight {
+				label = "lcd-backlight1";
+				max-brightness = <2047>;
+				min-brightness = <4>;
+				max-hw-brightness = <2047>;
+			};
+		};
+
 		topckgen@10000000 {
 			compatible = "mediatek,topckgen";
 			reg = <0 0x10000000 0 0x1000>;
