[ALPS07864670] Touch: add touch support for S3910 S3908
add touch support for S3910 S3908

MTK-Commit-Id: 1257a5dc95ec7a66d9c02cbbf1a48ef84bbf234e

Signed-off-by: Lijun Deng <lijun.deng@mediatek.com>
CR-Id: ALPS07864670
Feature: touch_driver
Change-Id: I02e60e52a05e72018bb9e18108e77ffad0f6081a

--- a/drivers/input/touchscreen/Makefile
+++ b/drivers/input/touchscreen/Makefile
@@ -120,3 +120,7 @@ obj-y += $(foreach TOUCH,$(TOUCH_LISTS),$(TOUCH)/)
 ifneq ($(wildcard $(srctree)/$(src)/k6985v1_64_alpha),)
 obj-$(CONFIG_TOUCHSCREEN_MT6985_ALPHA_SUPPORT) += k6985v1_64_alpha/
 endif
+
+ifneq ($(wildcard $(srctree)/$(src)/k6985v1_64_flip_alpha),)
+obj-$(CONFIG_TOUCHSCREEN_MT6985_ALPHA_SUPPORT) += k6985v1_64_flip_alpha/
+endif
