[ALPS07858598] arm64: dts: mt6985: add peri-axi-dbg node
[Detail]
Add peri-axi-dbg node for APDMA debug bus hang.

MTK-Commit-Id: d9faf54a31186728494d9c29b706100e35be9730

Signed-off-by: Tianbin Chen <Tianbin.Chen@mediatek.com>
CR-Id: ALPS07858598
Feature: uart_driver
Change-Id: Id76da3af28bb51d0a0877ef52b3e07a41af321a5

--- a/arch/arm64/boot/dts/mediatek/mt6985.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6985.dts
@@ -3597,6 +3597,7 @@
 				dma-requests = <8>;
 				support-hub = <0xC0>;  /*bit 0~7 to ch 0~7*/
 				peri-regs = <0x11036300 0x1 0x1>;  /*peri: <base, mask, val>*/
+				peri-axi-dbg = <0x11036150>;
 				#dma-cells = <1>;
 		};
 
