[ALPS07780608] arm64: dts: mt6985: add pmic-lvsys-notify node
Add pmic-lvsys-notify node.

MTK-Commit-Id: e934af4b50c4e2f5fdd35e6cc831f5f171d741b7

Signed-off-by: Jeter Chen <jeter.chen@mediatek.com>
CR-Id: ALPS07780608
Feature: Dynamic load power throttling
Change-Id: Id40878ec64b870157bb19a26805cfc6c366edf7c

--- a/arch/arm64/boot/dts/mediatek/mt6985.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6985.dts
@@ -13115,9 +13115,6 @@
 
 	pmic-oc-debug {
 		compatible = "mediatek,mt6983-oc-debug";
-		interrupt-parent = <&main_pmic>;
-		interrupts = <54 IRQ_TYPE_NONE>, <55 IRQ_TYPE_NONE>;
-		interrupt-names = "LVSYS_R", "LVSYS_F";
 		status = "okay";
 	};
 
@@ -15457,6 +15454,18 @@ FLL0_out,FLL1_out,FLL2_out,FLL4_out,FLL5_out,FLL6_out";
 };
 
 /delete-node/ &mt6363_vbuck4_sshub;
+
+&main_pmic {
+	pmic-lvsys-notify {
+		compatible = "mediatek,mt6363-lvsys-notify";
+		thd-volts-l = <3400>;
+		thd-volts-h = <3500>;
+		lv-deb-sel = <0>;
+		hv-deb-sel = <2>;
+		vio18-switch-reg = <0x53 0x58>;
+		status = "okay";
+	};
+};
 
 &mddriver {
 	/* for md pmic voltage setting*/
