[ALPS07780608] arm64: dts: mt6985: add PT INT. enable node
add PT lvsys enable node
add PT vbat enable node
affect DujacP only

MTK-Commit-Id: 65ddbaedd772aad2d1735524841d897b753ffcc9

Signed-off-by: mtk26843 <victor-wc.lin@mediatek.com>
CR-Id: ALPS07780608
Feature: Dynamic load power throttling
Change-Id: I193c12a853bbf0793e278af8280ea8d1d949ff35

--- a/arch/arm64/boot/dts/mediatek/mt6985.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6985.dts
@@ -13444,6 +13444,8 @@
 		hv-thd-volt = <3500>;
 		lv1-thd-volt = <3450>;
 		lv2-thd-volt = <3300>;
+		lvsys-thd-enable = <1>;
+		vbat-thd-enable = <0>;
 	};
 
 	pbm: pbm {
