[ALPS07884068] arm64: dts: mt6985: add icc for wifi
add icc for wifi

MTK-Commit-Id: b8b047a0fb47d36a39ce6c593237a4814342918a

Signed-off-by: Kok Suan Lim <ks.lim@mediatek.com>
CR-Id: ALPS07884068
Feature: Wi-Fi Driver CONNAC
Change-Id: I840216ca2e7a82b9c294aeec5819a28d389d3bc2

--- a/arch/arm64/boot/dts/mediatek/mt6985.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6985.dts
@@ -6941,6 +6941,10 @@
 			conninfra-emi-addr = <0>;
 			conninfra-emi-size = <0xc00000>;
 			#thermal-sensor-cells = <1>;
+			interconnects = <&dvfsrc MT6873_MASTER_MCUSYS &dvfsrc MT6873_SLAVE_DDR_EMI>;
+			interconnect-names = "wifi-perf-bw";
+			required-opps = <&dvfsrc_freq_opp0>,
+					<&dvfsrc_freq_opp1>;
 		};
 
 		wifi_page_pool: wifi_page_pool {
