[ALPS07862352] arm64: configs: panel ko
1. add nt37705 fhd cmd dphy boe ko
2. add bf130 hd cmd dphy boe ko

MTK-Commit-Id: a0675653023ab60c5fff27ea75a1a327abaa6751

Signed-off-by: mtk30395 <castro.dong@mediatek.com>
CR-Id: ALPS07862352
Feature: display_mobile
Change-Id: Ic08c85e7bac85962ace8fa09213f4fa19e1f2dee

--- a/arch/arm64/configs/mgk_64_k515_defconfig
+++ b/arch/arm64/configs/mgk_64_k515_defconfig
@@ -222,6 +222,8 @@ CONFIG_DRM_PANEL_NT37705_ALPHA_CMD=m
 CONFIG_DRM_PANEL_NT37705_ALPHA_CMD_SPR=m
 CONFIG_DRM_PANEL_L12A_42_02_0A_DSC_CMD=m
 CONFIG_DRM_PANEL_NT37801_CMD_FHD=m
+CONFIG_DRM_PANEL_BOE_NT37705_DPHY_CMD_FHD=m
+CONFIG_DRM_PANEL_BOE_BF130_DPHY_CMD_HD=m
 CONFIG_DRM_MEDIATEK_PANEL=m
 CONFIG_DRM_MEDIATEK=m
 CONFIG_DRM_MEDIATEK_V2=y
