--- a/drivers/gpu/drm/panel/Makefile
+++ b/drivers/gpu/drm/panel/Makefile
@@ -1,6 +1,8 @@
 # SPDX-License-Identifier: GPL-2.0
 ccflags-y += -I$(srctree)/drivers/misc/mediatek/include/mt-plat
 
+obj-$(CONFIG_DRM_PANEL_BOE_NT37705_DPHY_CMD_FHD) += panel-boe-nt37705-dphy-cmd-fhd.o
+obj-$(CONFIG_DRM_PANEL_BOE_BF130_DPHY_CMD_HD) += panel-boe-bf130-dphy-cmd-hd.o
 obj-$(CONFIG_DRM_PANEL_ABT_Y030XX067A) += panel-abt-y030xx067a.o
 obj-$(CONFIG_DRM_PANEL_ARM_VERSATILE) += panel-arm-versatile.o
 obj-$(CONFIG_DRM_PANEL_ASUS_Z00T_TM5P5_NT35596) += panel-asus-z00t-tm5p5-n35596.o
